Fix long function param overflow

--- a/packages/spreadsheet/src/spreadsheet/functionHelper/functionSummaryHelper/FunctionSummaryHelper.scss
+++ b/packages/spreadsheet/src/spreadsheet/functionHelper/functionSummaryHelper/FunctionSummaryHelper.scss
@@ -5,9 +5,7 @@
   position: relative;
   width: 300px;
   padding: 10px;
-  max-height: 25px;
-  overflow-y: hidden;
-  transition: max-height 0.3s ease-out;
+  min-height: 25px;
   line-height: 25px;
 
   &-parameters,
@@ -18,6 +16,11 @@
     font-weight: bold;
     margin-top: 0px;
     display: inline;
+  }
+
+  &-text-wrapper {
+    display: none;
+    overflow-y: auto;
   }
 
   &-parameters {
@@ -34,6 +37,7 @@
 
   &-expanded {
     max-height: 450px;
+    display: block;
   }
 
   &-collapse-icon,
